--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+
+html,body{
+    height:100%;
+    width: 100%;
+    font-size: 62.5%;
+}
+body{
+    background-color:white;
+}
+
+#root{
+    width: 100%;
+    height: 100%;
+}
+.App{
+    display:grid;
+    grid-template-rows: 7rem auto 5rem;
+    grid-template-areas: "header" "main" "footer";
+}
+
+.header{
+    grid-area: "header";
+}
+
+.main{
+    grid-area:"main";
+}
+.footer{
+    grid-area:"footer" 
+}
