--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,53 @@ body{
 .footer{
     grid-area:"footer" 
 }
+
+
+@keyframes slider1 {
+    0%{
+        transform: translateX(0%)
+    };
+    50%{
+        transform: translateX(-100%)  
+    };
+    100%{
+        transform:translateX(-200%)
+    }
+}
+
+
+@keyframes slider2 {
+    0% {
+        transform: translateX(100%)
+    };
+    50%{
+        transform: translateX(-100%)  
+    };
+    100%{
+        transform:translateX(-100%)
+    }
+}
+
+@keyframes slider3 {
+    0% {
+        transform: translateX(200%)
+    };
+    50%{
+        transform: translateX(100%)  
+    };
+    100%{
+        transform:translateX(0%)
+    }
+}
+
+.carousel_1{
+    animation:slider1 10s ease-in-out infinite
+}
+
+.carousel_2{
+    animation:slider2 10s ease-in-out infinite
+}
+
+.carousel_3{
+    animation:slider3 10s ease-in-out infinite
+}
