--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@ html,body{
 
 body {
   margin: 0;
+  height: 100%;
+  width: 100%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, ".SFNSText-Regular",
     sans-serif;
   font-weight: 500;
@@ -49,6 +51,9 @@ body {
 @layer base{
     body{
         @apply dark:bg-black
+    }
+    #root{
+      @apply dark:bg-black
     }
    
 }
@@ -84,7 +89,4 @@ body {
   }
 }
 
-@layer base{
-  
-}
 
