--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,14 @@ body {
     width: 100%;
     height: 100%;
 }
-.App{
+/* .App{
     display:grid;
     grid-template-rows: 7rem auto 5rem;
     grid-template-areas: "header" "main" "footer";
     font-family: sans-serif;
-}
+} */
 
-.header{
+/* .header{
     grid-area: "header";
 }
 
@@ -46,7 +46,7 @@ body {
 }
 .footer{
     grid-area:"footer" 
-}
+} */
 
 @layer base{
     body{
